--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,16 +5,16 @@
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/yourshirt/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "favicon-32x32.png",
+      "type": "image/yourshirt/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "favicon-16x16.png",
+      "type": "image/yourshirt/png",
       "sizes": "512x512"
     }
   ],
