--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "fontsource-roboto": "^4.0.0",
     "mui-datatables": "^3.7.7",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
     "url-loader": "^4.1.1"
   }
