--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mui-datatables": "^3.7.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-faq-component": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
