--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-faq-component": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
     "typography": "^0.16.19",
     "web-vitals": "^1.1.1"
   },
