--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "fontsource-roboto": "^4.0.0",
     "mui-datatables": "^3.7.7",
     "node-sass": "^5.0.0",
