--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "ros.distro": "foxy",
     "python.autoComplete.extraPaths": [
         "C:\\opt\\ros\\foxy\\x64\\Lib\\site-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "C:\\opt\\ros\\foxy\\x64\\Lib\\site-packages"
     ]
 }
