--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.28",
     "@material-ui/icons": "^4.11.2",
+    "@react-pdf/renderer": "^2.0.12",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "fontsource-roboto": "^4.0.0",
+    "jspdf": "^2.3.1",
+    "jspdf-invoice-template": "^1.2.0",
     "mui-datatables": "^3.7.7",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
@@ -18,6 +21,7 @@
     "react-faq-component": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "0.0.13",
     "recharts": "^2.0.9",
     "typography": "^0.16.19",
     "web-vitals": "^1.1.1"
