--- a/package.json
+++ b/package.json
@@ -12,17 +12,25 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "emailjs": "^3.4.0",
+    "emailjs-com": "^2.6.4",
     "fontsource-roboto": "^4.0.0",
     "jspdf": "^2.3.1",
     "jspdf-invoice-template": "^1.2.0",
     "mui-datatables": "^3.7.7",
     "node-sass": "^5.0.0",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
     "react-faq-component": "^1.3.0",
+    "react-html-email": "^3.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-to-pdf": "0.0.13",
+    "reactstrap": "^8.9.0",
     "recharts": "^2.0.9",
     "typography": "^0.16.19",
     "web-vitals": "^1.1.1"
