--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fontsource-roboto": "^4.0.0",
     "jspdf": "^2.3.1",
     "jspdf-invoice-template": "^1.2.0",
+    "material-table": "^1.69.3",
     "mui-datatables": "^3.7.7",
     "node-sass": "^5.0.0",
     "nodemailer-express-handlebars": "^4.0.0",
